--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"repository": {
 		"url": "https://github.com/ccorcos/scrape-html"
 	},
-	"main": "scapeHtml.js",
+	"main": "scrapeHtml.js",
 	"bin": "cli.js",
 	"scripts": {
 		"clean": "rm -rf build",
